# onekm

./: .gitignore  BUILD_WINDOWS.md  CLAUDE.md  CMakeLists.txt  README.md  build_windows.bat
docs/: README.zh-CN.md
docs/design/: design.md
src/client/: input_inject.c  input_inject.h  keymap.c  keymap.h  main.c
src/common/: network.h  protocol.c  protocol.h
src/device/: CMakeLists.txt  sdkconfig
src/device/main/: CMakeLists.txt  CMakeLists_hardware_test.txt  lankm_esp32.c  lankm_hardware_test.c  onekm_esp32.c  onekm_hardware_test.c  tusb_hid_example_main.c
src/server/: edge_detector.c  edge_detector.h  hotplug.c  hotplug.h  inhibit.c  inhibit.h  input_capture.c  input_capture.h  key_sync.c  keyboard_state.c  keyboard_state.h  main.c  state_machine.c  state_machine.h  uart.c  uart.h  uinput_inject.c  uinput_inject.h
